--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -14,15 +14,20 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
+	font-size: 62.5%;
 	vertical-align: baseline;
+}
+*{
+	font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-weight: 700;
+	color: #75B79E;
 }
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	background-color: #eef9bf;
 	line-height: 1;
 }
 ol, ul {
