--- a/src/style/style.css
+++ b/src/style/style.css
@@ -17,6 +17,16 @@ body > main{
     justify-content: space-between;
     flex-flow: row wrap;
     gap: 34px;
-    /* alterar esse tamanho para organizar corretamente os itens*/
-    max-width: calc( (117px + 34px) * 4);;
+}
+.size2 {
+    max-width: calc( (117px + 34px) * 2);
+}
+.size3 {
+    max-width: calc( (117px + 34px) * 3);
+}
+.size4 {
+    max-width: calc( (117px + 34px) * 4);
+}
+.size5{
+    max-width: calc( (117px + 34px) * 5);
 }
