--- a/src/style/cardsAnimation.css
+++ b/src/style/cardsAnimation.css
@@ -20,22 +20,12 @@ main .card .face {
     transition: all 700ms;
     transform-style: preserve-3d;
 }
-main .card #back-face {
+.back-face {
     transform: rotateY(180deg);
 }
-
-/* main .card:hover #back-face {
-    transform: rotateY(0deg);
-}
-main .card:hover #front-face {
-    transform: rotateY(-180deg);
-} */
 .back-flip{
     transform: rotateY(0deg);
 }
 .front-flip{
     transform: rotateY(-180deg);
-}
-.card-not-selected{
-    pointer-events: none;
 }
